New move generator working and complete